@startuml Week8_Command_Adapter_Patterns

!define COMMAND_COLOR #FFE6E6
!define ADAPTER_COLOR #E6F3FF
!define DOMAIN_COLOR #E6FFE6
!define VENDOR_COLOR #FFF4E6

package "main.java.command" COMMAND_COLOR {
    interface Command {
        +execute()
        +undo() : default
    }
    
    class AddItemCommand {
        -OrderService service
        -String recipe
        -int qty
        +execute()
        +undo()
    }
    
    class PayOrderCommand {
        -OrderService service
        -PaymentStrategy strategy
        -int taxPercent
        +execute()
    }
    
    class MacroCommand {
        -Command[] steps
        +execute()
        +undo()
    }
    
    class PosRemote {
        -Command[] slots
        -Deque<Command> history
        +setSlot(int, Command)
        +press(int)
        +undo()
    }
    
    class OrderService {
        -ProductFactory factory
        -Order order
        +addItem(String, int)
        +removeLastItem()
        +pay(PaymentStrategy, int)
        +totalWithTax(int) : Money
        +order() : Order
    }
    
    Command <|.. AddItemCommand
    Command <|.. PayOrderCommand
    Command <|.. MacroCommand
    PosRemote --> Command : uses
    AddItemCommand --> OrderService : receiver
    PayOrderCommand --> OrderService : receiver
    MacroCommand --> Command : aggregates
}

package "main.java.printing" ADAPTER_COLOR {
    interface Printer {
        +print(String receiptText)
    }
    
    class LegacyPrinterAdapter {
        -LegacyThermalPrinter legacyPrinter
        +print(String receiptText)
    }
    
    Printer <|.. LegacyPrinterAdapter
}

package "vendor.legacy" VENDOR_COLOR {
    class LegacyThermalPrinter {
        +legacyPrint(byte[] payload)
    }
}

package "main.java.order" DOMAIN_COLOR {
    class Order {
        -long id
        -List<LineItem> items
        +addItem(LineItem)
        +subtotal() : Money
        +totalWithTax(int) : Money
        +pay(PaymentStrategy)
    }
    
    class LineItem {
        -Product product
        -int quantity
    }
    
    class Money {
        +add(Money) : Money
        +multiply(double) : Money
    }
}

package "main.java.catalog" DOMAIN_COLOR {
    interface Product {
        +id() : String
        +name() : String
        +basePrice() : Money
    }
}

package "main.java.payment" DOMAIN_COLOR {
    interface PaymentStrategy {
        +pay(Order order)
    }
    
    class CardPayment {
        +pay(Order order)
    }
    
    class CashPayment {
        +pay(Order order)
    }
    
    class WalletPayment {
        +pay(Order order)
    }
    
    PaymentStrategy <|.. CardPayment
    PaymentStrategy <|.. CashPayment
    PaymentStrategy <|.. WalletPayment
}

package "main.java.factory" DOMAIN_COLOR {
    class ProductFactory {
        +create(String recipe) : Product
    }
}

' Relationships
OrderService --> Order : uses
OrderService --> ProductFactory : uses
OrderService --> PaymentStrategy : uses
Order --> LineItem : contains
LineItem --> Product : contains
Order --> Money : uses
Product --> Money : uses
PayOrderCommand --> PaymentStrategy : uses

' Adapter Pattern
LegacyPrinterAdapter --> LegacyThermalPrinter : adapts
LegacyPrinterAdapter ..> Printer : implements

note right of LegacyPrinterAdapter
  Adapter Pattern
  Converts String to byte[]
  for legacy printer
end note

note right of PosRemote
  Command Pattern
  Invoker: Button presses
  decoupled from business logic
end note

note right of OrderService
  Command Pattern
  Receiver: Business logic
  executes operations
end note

@enduml


